--- a/style.css
+++ b/style.css
@@ -19,7 +19,7 @@
 
         /* Hero section background image with full screen height */
         .hero-background {
-            background-image: url('pictures/8bg.jpg');
+            background-image: url('pictures/cfeebg3.webp');
             background-position: center;
             background-repeat: no-repeat;
         }
